--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,6 +23,9 @@ jobs:
 
     - name: Build
       run: go build -v ./...
+    
+    - name: Vet
+      run: go vet -v ./...
 
     - name: Test
       run: go test -v ./...
